k8s-practice/edx/rsvp-web-customer1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp-customer1
  labels:
    app: rsvp-customer1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsvp-customer1
  template:
    metadata:
      labels:
        app: rsvp-customer1
    spec:
      containers:
      - name: rsvp-app
        image: teamcloudyuga/rsvpapp
        ports:
        - containerPort: 5000
          name: web-port
