k8s-practice/edx/rsvp-web-service-customer-1.yml
apiVersion: v1
kind: Service
metadata:
  name: rsvp-customer1
  labels:
    app: rsvp-customer1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: web-port
    protocol: TCP
  selector:
    app: rsvp-customer1
